--- a/android/VIPFriends/AndroidManifest.xml
+++ b/android/VIPFriends/AndroidManifest.xml
@@ -6,17 +6,23 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:name=".MyApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.vipfriends.MainActivity"
+            android:name="com.vipfriends.activity.MainActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:configChanges="mcc|mnc|locale|keyboardHidden|orientation"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="stateHidden|adjustUnspecified"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
