--- a/android/VIPFriends/AndroidManifest.xml
+++ b/android/VIPFriends/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 照相 -->
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+	<!-- 闪光灯 -->
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
